src/test/ui/issues/issue-49074.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: cannot find attribute macro `marco_use` in this scope
  --> $DIR/issue-49074.rs:3:3
   |
LL | #[marco_use] // typo
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `macro_use`

error: cannot find macro `bar!` in this scope
=======
error: cannot find macro `bar` in this scope
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/issue-49074.rs:12:4
   |
LL |    bar!();
   |    ^^^
   |
   = help: have you added the `#[macro_use]` on the module/import?

error: cannot find attribute `marco_use` in this scope
  --> $DIR/issue-49074.rs:3:3
   |
LL | #[marco_use] // typo
   |   ^^^^^^^^^ help: a built-in attribute with a similar name exists: `macro_use`

error: aborting due to 2 previous errors

